@@ -2,6 +2,7 @@ package lucaguerra.user;
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -78,7 +79,11 @@ public class User implements UserDetails {
 
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
-		return List.of(new SimpleGrantedAuthority(role.name()));
+		if (this.role != null) {
+			return List.of(new SimpleGrantedAuthority(role.name()));
+		}
+		// Restituisci una lista vuota o altra logica di fallback se role è null.
+		return Collections.emptyList();
 	}
 
 	@Override
